force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <displayFormat>BN-{0}</displayFormat>
        <label>Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>