force-app/main/default/objects/Batch__c/fields/Current_Enrollment_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment_Count__c</fullName>
    <label>Current_Enrollment_Count</label>
    <summaryForeignKey>Enrollment__c.Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>