force-app/main/default/objects/Batch__c/validationRules/Batch_EndDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Batch_EndDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>EndDate must be after StartDate</errorMessage>
</ValidationRule>