force-app/main/default/objects/Batch__c/validationRules/Batch_StartDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Batch_StartDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>The Start Date cannot be in the past</errorMessage>
</ValidationRule>